--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,24 @@
-body{
-    font-family: sans-serif, Arial;
+body {
+  font-family: sans-serif, Arial;
 }
-
 
 .my-card {
   width: 90%;
+  min-height: 450px;
 }
 
 .my-img {
   width: 300px;
   height: 250px;
   margin: 0 auto;
+}
+
+.my-icons {
+  width: 50px;
+  height: 50px;
+  right: 0;
+  bottom: 0;
+  border-radius: 40px;
+  margin-bottom: 5px;
+  margin-right: 5px;
 }
